Add image source (CC0 license)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             </div>
             <div id="advent">
                 <picture>
+                    <!-- image source: https://www.rawpixel.com/image/5947729/free-public-domain-cc0-photo -->
                     <source srcset="images/advent_dark.jpg" media="(prefers-color-scheme: dark)">
+                    <!-- image source: https://www.rawpixel.com/image/5943695/free-public-domain-cc0-photo -->
                     <img src="images/advent.jpg">
                 </picture>
             </div>
