Add css and styling for dark mode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>취리히 한인성당, 스위스 취리히 한인 천주교회, Korean Catholic Mission, Koreanische Katholische Gemeinde in Zürich </title>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 
 <body>
