Add link to email text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <dt>주임신부:</dt>
                     <dd>이영덕 안토니오<br />
                         +41 079 204 2352<br />
-                        theoantlee@gmail.com <br />
+                        <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
