Add technical support email

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p><strong>Koreanische Katholische Gemeinde in Zürich</strong></p>
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
-                    <dd>이영덕 안토니오<br />
+                    <dd>이영덕(李映德) 안토니오 신부님<br />
                         <a href="tel:+41792042352">+41 079 204 2352</a><br />
                         <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
                         <a href="https://wa.me/41792042352">
@@ -46,7 +46,8 @@
 
                     <dt>성당주소:</dt>
                     <dd>St. Peter und Paul,<br />
-                        Werdgässchen 26, 8004 Zürich</dd>
+                        <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">Werdgässchen 26, 8004 Zürich</a>
+                    </dd>
                     <dt>미사일정:</dt>
                     <dd>매달 2, 4 주 주일 오후 3시</dd>
                 </dl>
@@ -67,7 +68,8 @@
             </div>
             <div class="feature1 last">
                 <h2>찾아오시는 길</h2>
-                <p><b>주소:</b> Werdstrasse 63, 8004 Zürich, Schweiz </p>
+                <p><b>주소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">Werdstrasse 63, 8004 Zürich, Schweiz</a>
+                </p>
                 <dl>
                     <dt>Zürich 중앙역 앞에서</dt>
                     <dd>Triemli 방향, 14번 Tram, Werd 에서 하차</dd>
@@ -75,9 +77,9 @@
                     <dd>Heuried 방향, 9번 Tram, Werd 에서 하차</dd>
                 </dl>
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2702.040209779829!2d8.525518651225585!3d47.372133679067574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900a1c8346e2a3%3A0xe75fb1d4001bf9da!2sPfarrei+St.+Peter+und+Paul!5e0!3m2!1sen!2sch!4v1484509527841"
-                    width="295" height="295" frameborder="0" style="border:0" allowfullscreen></iframe>
-                <div class="clear"></div>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5213.913750185965!2d8.526763960097174!3d47.37328240620422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe75fb1d4001bf9da!2sKatholische%20Pfarrei%20St.%20Peter%20und%20Paul!5e0!3m2!1sen!2sch!4v1669822721866!5m2!1sen!2sch"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
@@ -88,8 +90,10 @@
             <div class="impression">
                 <p>koreanische katholische Kirchgemeinde Schweiz: CH8409000000855730112</p>
             </div>
+            <div class="impression">
+                <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
+            </div>
         </div>
-
 
 </body>
 
