Upload png and jpeg format of mass schedule

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
-                        <a href="tel:+41792042352">+41 079 204 2352</a><br />
-                        <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
+                        ☎️ <a href="tel:+41792042352">+41 079 204 2352</a><br />
+                        ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
@@ -49,18 +49,22 @@
                         <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">Werdgässchen 26, 8004 Zürich</a>
                     </dd>
                     <dt>미사일정:</dt>
-                    <dd>매달 2, 4 주 주일 오후 3시</dd>
+                    <dd>매달 2, 4째주 주일 오후 3시</dd>
                 </dl>
                 <p>*형제, 자매 여러분 환영합니다! <br /> 자세한 사항은 미사 일정표를 참조하세요.</p>
             </div>
             <div class="feature1">
                 <h2>Upcoming Events</h2>
                 <ul>
-                    <li>
-                        <a href="pdf/2022.pdf">2022 미사일정 (pdf)</a>
+                    <li> 2022년 미사일정
+                        <a href="schedule/2022.pdf">문서(pdf)</a>
+                        <a href="schedule/2022.png">그림(png)</a>
+                        <a href="schedule/2022.jpg">사진(jpeg)</a>
                     </li>
-                    <li>
-                        <a href="pdf/2023.pdf">2023 미사일정 (pdf)</a>
+                    <li>2023년 미사일정
+                        <a href="schedule/2023.pdf">문서(pdf)</a>
+                        <a href="schedule/2023.png">그림(png)</a>
+                        <a href="schedule/2023.jpg">사진(jpeg)</a>
                     </li>
                 </ul>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
