--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
     <div id="container" class="homepage">
         <div class="box">
-            <div class="feature1">
+            <div class="feature">
                 <h2>Welcome to </h2>
-                <p><strong>스위스 취리히 한인 천주교회</strong></p>
-                <p><strong>Koreanische Katholische Gemeinde in Zürich</strong></p>
+                <p><strong>스위스 취리히 한인 천주교회</strong><br>
+                    <strong>Koreanische Katholische Gemeinde in Zürich</strong>
+                </p>
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
@@ -53,24 +54,26 @@
                 </dl>
                 <p>*형제, 자매 여러분 환영합니다! <br /> 자세한 사항은 미사 일정표를 참조하세요.</p>
             </div>
-            <div class="feature1">
+            <div class="feature">
                 <h2>Upcoming Events</h2>
-                <ul>
-                    <li> 2022년 미사일정
+                <dl>
+                    <dt> 2022년 미사 일정</dt>
+                    <dd>
                         <a href="schedule/2022.pdf">문서(pdf)</a>
                         <a href="schedule/2022.png">그림(png)</a>
                         <a href="schedule/2022.jpg">사진(jpeg)</a>
-                    </li>
-                    <li>2023년 미사일정
+                    </dd>
+                    <dt>2023년 미사 일정</dt>
+                    <dd>
                         <a href="schedule/2023.pdf">문서(pdf)</a>
                         <a href="schedule/2023.png">그림(png)</a>
                         <a href="schedule/2023.jpg">사진(jpeg)</a>
-                    </li>
-                </ul>
+                    </dd>
+                </dl>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
-                    style="border: 0" width="295" height="295" frameborder="0" scrolling="no"></iframe>
+                    style="border: 0" frameborder="0" scrolling="no"></iframe>
             </div>
-            <div class="feature1 last">
+            <div class="feature last">
                 <h2>찾아오시는 길</h2>
                 <p><b>주소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">Werdstrasse 63, 8004 Zürich, Schweiz</a>
                 </p>
@@ -82,19 +85,19 @@
                 </dl>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5213.913750185965!2d8.526763960097174!3d47.37328240620422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe75fb1d4001bf9da!2sKatholische%20Pfarrei%20St.%20Peter%20und%20Paul!5e0!3m2!1sen!2sch!4v1669822721866!5m2!1sen!2sch"
-                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
-        <div id="footer">
-            <div class="impression">
+        <div id="footer" class="box">
+            <div class="feature">
                 <p>© 2022 | 스위스 취리히 한인 천주교회</p>
             </div>
-            <div class="impression">
+            <div class="feature">
                 <p>koreanische katholische Kirchgemeinde Schweiz: CH8409000000855730112</p>
             </div>
-            <div class="impression">
+            <div class="feature">
                 <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
             </div>
         </div>
