--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div id="footer" class="box">
             <div class="feature">
-                <p>© 2022 | 스위스 취리히 한인 천주교회</p>
+                <p>©2022 스위스 취리히 한인 천주교회</p>
             </div>
             <div class="feature">
                 <p>koreanische katholische Kirchgemeinde Schweiz: CH8409000000855730112</p>
