--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div id="container" class="homepage">
         <div class="box">
             <div class="feature">
-                <h2>Welcome to </h2>
-                <p><strong>스위스 취리히 한인 천주교회</strong><br>
-                    <strong>Koreanische Katholische Gemeinde in Zürich</strong>
+                <h2>Welcome to</h2>
+                <p><strong>스위스 취리히 한인 천주교회<br>
+                        Koreanische Katholische Gemeinde in Zürich</strong>
                 </p>
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
-                        ☎️ <a href="tel:+41792042352">+41 079 204 2352</a><br />
+                        ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a><br />
                         ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
@@ -59,15 +59,15 @@
                 <dl>
                     <dt> 2022년 미사 일정</dt>
                     <dd>
-                        <a href="schedule/2022.pdf">문서(pdf)</a>
-                        <a href="schedule/2022.png">그림(png)</a>
-                        <a href="schedule/2022.jpg">사진(jpeg)</a>
+                        <a href="schedule/2022.pdf">PDF</a>
+                        <a href="schedule/2022.png">PNG</a>
+                        <a href="schedule/2022.jpg">JPEG</a>
                     </dd>
                     <dt>2023년 미사 일정</dt>
                     <dd>
-                        <a href="schedule/2023.pdf">문서(pdf)</a>
-                        <a href="schedule/2023.png">그림(png)</a>
-                        <a href="schedule/2023.jpg">사진(jpeg)</a>
+                        <a href="schedule/2023.pdf">PDF</a>
+                        <a href="schedule/2023.png">PNG</a>
+                        <a href="schedule/2023.jpg">JPEG</a>
                     </dd>
                 </dl>
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
