Make logo narrower

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <img src="images/logo.png" class="logo">
             </picture>
         </div>
-        <div id="advent">
+        <div id="banner">
             <picture>
                 <!-- image source: https://www.rawpixel.com/image/5947729/free-public-domain-cc0-photo -->
-                <source srcset="images/advent_dark.jpg" media="(prefers-color-scheme: dark)">
+                <source srcset="images/banner_dark.jpg" media="(prefers-color-scheme: dark)">
                 <!-- image source: https://www.rawpixel.com/image/5943695/free-public-domain-cc0-photo -->
-                <img src="images/advent.jpg" class="logo">
+                <img src="images/banner.jpg" class="banner">
             </picture>
         </div>
     </div>
