--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div id="header">
-        <div id="logo">
+    <div class="header">
+        <div class="logo">
             <picture>
                 <source srcset="images/logo_dark.png" media="(prefers-color-scheme: dark)">
                 <img src="images/logo.png" class="logo">
             </picture>
         </div>
-        <div id="banner">
+        <div class="banner">
             <picture>
                 <!-- image source: https://www.rawpixel.com/image/5947729/free-public-domain-cc0-photo -->
                 <source srcset="images/banner_dark.jpg" media="(prefers-color-scheme: dark)">
