--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ picture-in-picture; web-share" allowfullscreen></iframe>
                 <p>©2022 스위스 취리히 한인 천주교회</p>
             </div>
             <div class="feature">
-                <p>koreanische katholische Kirchgemeinde Schweiz: CH8409000000855730112</p>
+                <p>교무금 내기 koreanische katholische Kirchgemeinde Schweiz: IBAN CH8409000000855730112</p>
             </div>
             <div class="feature">
                 <p><a href="mailto:kkgs.ch@gmail.com">Technical support</a></p>
