--- a/index.html
+++ b/index.html
@@ -47,14 +47,9 @@
                         </a>
                     </dd>
 
-                    <dt>성당주소:</dt>
-                    <dd>St. Peter und Paul,<br />
-                        <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">Werdgässchen 26, 8004 Zürich</a>
-                    </dd>
-                    <dt>미사일정:</dt>
-                    <dd>매달 2, 4째주 주일 오후 3시</dd>
+                    
                 </dl>
-                <p>*형제, 자매 여러분 환영합니다! <br /> 자세한 사항은 미사 일정표를 참조하세요.</p>
+                <p><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></p>
                 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/videoseries?list=PLW2vBvwgDje-OPulbAfKip0mp_5Z13iLZ"
 title="YouTube video player" frameborder="0" allow="accelerometer;
@@ -64,7 +59,7 @@ picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="feature">
                 <h2>Upcoming Events</h2>
                 <dl>
-                    <dt>2023년 미사 일정</dt>
+                    <dt>2023년 미사 일정: 매달 2, 4째주 주일 오후 3시</dt>
                     <dd>
                         <a href="schedule/2023.pdf">PDF</a>
                         <a href="schedule/2023.png">PNG</a>
@@ -77,7 +72,9 @@ picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="feature last">
                 <h2>찾아오시는 길</h2>
-                <p><b>주소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">Werdstrasse 63, 8004 Zürich, Schweiz</a>
+                <p><b>미사 장소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63, 8004 Zürich, Schweiz</a>
+                   <b>아가페 장소:</b>  <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">회관, Werdgässchen 26, 8004 Zürich</a>
+                                       
                 </p>
                 <dl>
                     <dt>Zürich 중앙역 앞에서</dt>
