--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <dd>이영덕(李映德) 안토니오 신부님<br />
                         ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a><br />
                         ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
-                        📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br />
+                        
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
@@ -49,6 +49,7 @@
 
                     
                 </dl>
+                <p>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></p>
                 <p><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></p>
                 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/videoseries?list=PLW2vBvwgDje-OPulbAfKip0mp_5Z13iLZ"
