--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
                     
                 </dl>
-                <p>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></p>
-                <p><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></p>
+                <h3>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></h3>
+                <h3><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></h3>
                 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/videoseries?list=PLW2vBvwgDje-OPulbAfKip0mp_5Z13iLZ"
 title="YouTube video player" frameborder="0" allow="accelerometer;
@@ -73,7 +73,7 @@ picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="feature last">
                 <h2>찾아오시는 길</h2>
-                <p><b>미사 장소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63, 8004 Zürich, Schweiz</a>
+                <p><b>미사 장소:</b> <a href="https://goo.gl/maps/BPAy4Th7NKGbBuE46">St. Peter und Paul, Werdstrasse 63, 8004 Zürich, Schweiz</a><br>
                    <b>아가페 장소:</b>  <a href="https://goo.gl/maps/USAxqhXK6U5dSsYS9">회관, Werdgässchen 26, 8004 Zürich</a>
                                        
                 </p>
