--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     
                 </dl>
-                <h3>📖 <a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></h3>
+                <h3><a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></h3>
                 <h3><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></h3>
                 <iframe width="560" height="315"
 src="https://www.youtube.com/embed/videoseries?list=PLW2vBvwgDje-OPulbAfKip0mp_5Z13iLZ"
