--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
             <div class="feature">
                 <h2>Upcoming Events</h2>
                 <dl>
-                    <dt>미사 일정: 매달 2, 4째주 주일 오후 3시</dt>
-                    <dd>
-                        <a href="schedule/2023.pdf">PDF</a>
-                        <a href="schedule/2023.png">PNG</a>
-                        <a href="schedule/2023.jpg">JPEG</a>
-                    </dd>
+                    <dt><a href="schedule/2023.png">미사 일정</a>: 대체로 2, 4째주 주일 오후 3시</dt>
+                     
                 </dl>
                 
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
