--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Upcoming Events</h2>
                 <dl>
                     <dt><a href="schedule/2023.png">미사 일정</a>: 대체로 2, 4째주 주일 오후 3시</dt>
-                     
+                     <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
                 </dl>
                 
                 <iframe src="https://calendar.google.com/calendar/embed?src=kkgs.ch%40gmail.com&ctz=Europe%2FZurich"
