--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     
                 </dl>
                 <h3><a href="https://kkgs-ch.github.io/homily/">강론 말씀 모음</a> <br /></h3>
-                <h3><a href="https://kkgs-ch.github.io/homily/">공지 사항 모음</a> <br /></h3>
+                <h3><a href="https://kkgs-ch.github.io/notice/">공지 사항 모음</a> <br /></h3>
                <blockquote class="instagram-media"
                            data-instgrm-captioned
                            data-instgrm-permalink="https://www.instagram.com/p/CljwgsyjGtl/?utm_source=ig_embed&amp;utm_campaign=loading"
