--- a/index.html
+++ b/index.html
@@ -52,22 +52,24 @@
  
             </div>
             <div class="feature">
-                <h2>Upcoming Events</h2>
-                 <a href="schedule/2023.png">미사 일정</a>: 대체로 2, 4째주 주일 오후 3시 
+                <h2><a href="schedule/2023.png">미사 일정</a>: 대체로 2, 4째주 주일 오후 3시 </h2>
+                 
                  <ul>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2728">3월 26일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2729">4월 9일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2730">4월 23일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2736">7월 30일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2737">8월 20일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2738">9월 10일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 오후 세시</></li>
-                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시</></li>                     
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2728">3월 26일 오후 세시. 사순</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2566">4월 8일 밤 9시. 부활전야미사 합동미사</a></li>                     
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2729">4월 9일 오후 세시. 부활대축일</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2730">4월 23일 오후 세시. 부활</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 오후 세시. 부활</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 오후 세시. 성령강림대축일</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 오후 세시. 그리스도의 성체성혈 대축일</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2734">6월 25일 오후 세시. 연중</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2629">7월 2일 오전 9:30. 주보성인축일행사</a></li>                     
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2735">7월 16일 오후 세시. 연중</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2736">7월 30일 오후 세시. 연중</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2737">8월 20일 오후 세시. 연중</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2738">9월 10일 오후 세시. 연중</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 오후 세시. 한가위대축일</a></li>
+                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시. 연중</a></li>                     
                  </ul>
                  <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
                  
