--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <dd>이영덕(李映德) 안토니오 신부님<br />
                         ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a><br />
                         ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
-                        
+                        고해성사 신부님께 신청하세요 <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
