add all known mass dates till 2024 1 1

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                             한가위대축일</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시.
                             연중</a></li>
+                    <li>11월 5일 오전 11시. Tag der Volker 합동미사, 총회 준비 사목회</li>
+                    <li>11월 26일 오후 세시. 그리스도왕 대축일, 정기총회/재정보고</li>
+                    <li>12월 10일 오후 세시. 대림, 정기총회/재정보고</li>
+                    <li>12월 24일 밤 10시. 성탄전야 합동미사</li>
+                    <li>12월 25일 오후 세시. 주님성탄대축일미사, 성탄행사</li>
+                    <li>2024년 1월 1일 오후 세시. 천주의 모친 성모마리아, 설</li>
                 </ul>
                 <a href="https://calendar.google.com/calendar/u/0/r?cid=kkgs.ch@gmail.com">구글 달력에 저장하기</a>
 
