--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             한가위대축일</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시.
                             연중</a></li>
-                    <li>11월 5일 오전 11시. Tag der Volker 합동미사, 총회 준비 사목회</li>
+                    <li>11월 5일 오전 11시. Tag der Völker 합동미사, 총회 준비 사목회</li>
                     <li>11월 26일 오후 세시. 그리스도왕 대축일, 정기총회/재정보고</li>
                     <li>12월 10일 오후 세시. 대림, 정기총회/재정보고</li>
                     <li>12월 24일 밤 10시. 성탄전야 합동미사</li>
