--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <ul>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2731">5월 14일 오후 세시.
                             부활</a></li>
+                    <li>5월 20일 어린이 피정</li>        
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2732">5월 28일 오후 세시.
                             성령강림대축일</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2733">6월 11일 오후 세시. 그리스도의
@@ -86,6 +87,7 @@
                             연중</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2739">10월 1일 오후 세시.
                             한가위대축일</a></li>
+                    <li>10월 8-10일 성인 피정</li>  
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2740">10월 22일 오후 세시.
                             연중</a></li>
                     <li><a href="https://katholisch-stadtzuerich.ch/veranstaltung/mutterkirche_2647/">11월 5일 오전 9시 30분(시간 확인 중). Tag der Völker 합동미사, 총회 준비 사목회</a></li>
