--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <dl id="homepage_info">
                     <dt>주임신부:</dt>
                     <dd>이영덕(李映德) 안토니오 신부님<br />
-                        ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a><br />
+                        ☎️ <a href="tel:+41792042352">+41 79 204 23 52</a> (카카오톡)<br />
                         ✉️ <a href="mailto:theoantlee@gmail.com">theoantlee@gmail.com</a> <br />
-                        고해성사, 미사지향: 신부님께 신청하세요 <br />
+                        <a href="https://maria.catholic.or.kr/mi_pr/prayer/prayer.asp?pgubun=7&sgubun=w">고해성사</a>, <a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사지향</a>: 신부님께 신청하세요 <br />
                         <a href="https://wa.me/41792042352">
                             <picture>
                                 <source srcset="images/whatsapp_dark.png" media="(prefers-color-scheme: dark)">
